# browser-use-mcp

./: README.md  example.env  pyproject.toml  server.py  spec.md
.github/workflows/: release.yml
