[project]
name = "tui-example"
version = "0.1.0"
# Use a non-package layout since we only have mcp.py at the root
readme = "README.md"
description = ""
authors = [
    {name = "SuperStep",email = "superstep007@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "browser_use",
    "fastmcp>=3.2.4",
    "langchain-deepseek",
]

[project.scripts]
browser-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
